# GCS_Asset

./: README.md  main.py  pyproject.toml
gcs_asset_components/: cloudStorage.py  getStorageFile.py  getStorageFileInfos.py  manageStorageBucket.py  manageStorageFile.py  sum.py
src/: cloudClient.py  cloudStorage.py  cloudStorageClient.py  getLocalObject.py  getStorageBucket.py  getStorageFile.py  getStorageFileInfos.py  getStorageFile_DELETING.py  getStorageObject.py  inputRequests.py  localObjectGetter.py  logger.py  main.py  manageStorageBucket.py  manageStorageFile.py  storageBucketManager.py  storageFileManager.py  storageGetter.py  storageObjectGetter.py  sum.py
src/components/: inputRequests.py  main.py
src/components/gcp_lib/: cloudClientConnector.py
src/components/gcp_lib/cloud_storage/: storageBucketManager.py  storageFileManager.py  storageGetter.py
test/: test_cloudClient.py  test_cloudClientConnector.py  test_cloudStorage.py  test_getStorageBucket.py  test_getStorageBucket_DELETING.py  test_storageBucketManager.py  test_storageGetter.py  test_sum.py
test/test_components/test_gcp_lib/: test_cloudClientConnector.py
test/test_components/test_gcp_lib/test_cloud_storage/: test_storageBucketManager.py  test_storageGetter.py
