[tool.poetry]
name = "gcs-asset"
version = "0.1.0"
description = ""
authors = ["DAVIDE CHIEREGATO <davide.chieregato96@gmail.com>"]
readme = "README.md"
packages = [{include = "gcs_asset"}]


[tool.poetry.dependencies]
python = "^3.11"
google = "^3.0.0"
coverage = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
